fixed 5day icon alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,5 +14,5 @@ header {
 }
 
 .card-body {
-  flex: auto;
+  /* flex: auto; */
 }
